// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/galaxy/index getReleases processes real data 1`] = `
Object {
  "dependencyUrl": "https://galaxy.ansible.com/yatesr/timezone",
  "registryUrl": "https://galaxy.ansible.com/",
  "releases": Array [
    Object {
      "releaseTimestamp": "2015-11-17T00:43:42.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2017-09-25T00:27:37.000Z",
      "version": "1.1.0",
    },
    Object {
      "releaseTimestamp": "2019-10-28T01:40:43.000Z",
      "version": "1.2.0",
    },
  ],
  "sourceUrl": "https://github.com/yatesr/ansible-timezone",
}
`;

exports[`datasource/galaxy/index getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=yatesr&name=timezone",
  },
]
`;

exports[`datasource/galaxy/index getReleases return null if searching random username and project name 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=foo&name=bar",
  },
]
`;

exports[`datasource/galaxy/index getReleases returns null for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=some_crate&name=undefined",
  },
]
`;

exports[`datasource/galaxy/index getReleases returns null for empty list 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=non_existent_crate&name=undefined",
  },
]
`;

exports[`datasource/galaxy/index getReleases returns null for empty result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=non_existent_crate&name=undefined",
  },
]
`;

exports[`datasource/galaxy/index getReleases returns null for missing fields 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=non_existent_crate&name=undefined",
  },
]
`;

exports[`datasource/galaxy/index getReleases returns null for unknown error 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=some_crate&name=undefined",
  },
]
`;

exports[`datasource/galaxy/index getReleases throws for 5xx 1`] = `[Error: external-host-error]`;

exports[`datasource/galaxy/index getReleases throws for 5xx 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=some_crate&name=undefined",
  },
]
`;

exports[`datasource/galaxy/index getReleases throws for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v1/roles/?owner__username=foo&name=bar",
  },
]
`;
